fix margin on footer causing overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -79,11 +79,11 @@ mat-sidenav-container {
     }
 
     main {
-      padding: 10px 10px 10px 10px;
+      padding: 10px;
     }
 
     footer {
-      margin: 10px;
+      margin: 10px 10px 0px 10px;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
